syntax = "proto3";

package bookstore;

option go_package = "grpc-test/protobuf/bookstore";

service BookstoreService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
  rpc AddBook(AddBookRequest) returns (AddBookResponse);
  rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  double price = 5;
  int32 quantity = 6;
  string category = 7;
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message ListBooksRequest {
  int32 page = 1;
  int32 page_size = 2;
  string category = 3;
}

message ListBooksResponse {
  repeated Book books = 1;
  int32 total_count = 2;
}

message AddBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  double price = 4;
  int32 quantity = 5;
  string category = 6;
}

message AddBookResponse {
  string id = 1;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  double price = 4;
  int32 quantity = 5;
}

message UpdateBookResponse {
  Book book = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}